fixed minor bugs and alignments

--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,23 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&family=Victor+Mono:ital,wght@0,100..700;1,100..700&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-*{
-    scrollbar-color: #8e8e8e #fff;
-    scrollbar-width: thin;
+::-webkit-scrollbar {
+  width: 5px;
 }
 
-body{
-    font-family: "Poppins";
+::-webkit-scrollbar-track {
+  background: black;
+}
+
+::-webkit-scrollbar-thumb {
+  background: rgba(238, 3, 3, 0.664);
+  border-radius: 10px;
+  border: none;
+}
+
+body {
+  font-family: "Victor Mono";
 }
